--- a/HTML/table.html
+++ b/HTML/table.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <p>Testing</p>
-    <table>
+    <table border="3">
         <thead>
-            <th>col</th>
+            <th>col1</th>
             <th>col2</th>
             <th>col3</th>
         </thead>
+
+        <tr>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+        </tr>
     </table>
     
 </body>
