--- a/HTML/form2test.html
+++ b/HTML/form2test.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>form test</title>
+    <title>form2 testing</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+
+    <p>Thank you for sign up</p>
     
 </body>
 </html>
