--- a/CSS/example3.html
+++ b/CSS/example3.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css3</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Moo+Lah+Lah">
+    
+
     <link rel="stylesheet" href="master3.css">
 </head>
 <body>
